changed post to class

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,6 +8,11 @@
     "moduleResolution": "node",
     "esModuleInterop": true
   },
-  "include": ["**/*.ts", "**/*.tsx"],
-  "exclude": ["node_modules"]
+  "include": [
+    "**/*.ts",
+    "**/*.tsx"
+  ],
+  "exclude": [
+    "node_modules"
+  ]
 }
